chore: add todos for the issues

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -72,6 +72,7 @@ jobs:
         id: scorecard
         uses: ossf/scorecard-action@dc50aa9510b46c811795eb24b2f1ba02a914e534 # v2.3.3
         with:
+          # TODO: #1216 Resolve Directory issue. The Destination is not being set created, now.
           results_file: results/scorecard.sarif
           results_format: sarif
           publish_results: true
