chore: add todos for the issues

--- a/.github/workflows/issue-managment.yml
+++ b/.github/workflows/issue-managment.yml
@@ -24,6 +24,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: read
+      # ISSUE: #1220 The next line is not valid. Check possible values for permissions.
       project: write
 
     outputs:
