--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,7 +40,7 @@
     analyze:
       name: CodeQL Analysis
       runs-on: ubuntu-latest
-      timeout-minutes: 360
+      timeout-minutes: 60
   
       strategy:
         fail-fast: false
@@ -77,19 +77,8 @@
             languages: ${{ matrix.language }}
             # TODO: check varitions of configuration: https://docs.github.com/en/code-security/code-scanning/learn-about-code-scanning/configuring-code-scanning#configuring-codeql
             # #ISSUE: #1218  A fatal error occurred: Config file supplied is not valid
-            config: |
-              paths:
-                - src
-                - tests
-              paths-ignore:
-                - '**/*.ui'
-                - '**/*.qrc'
-                - '**/*.ts'
-                - 'assets/'
-              queries:
-                - security-extended
-                - security-and-quality
-  
+            config-file: .github/codeql/codeql-config.yml
+
         - name: 🏗️ Build
           run: |
             hatch build
@@ -99,6 +88,7 @@
           uses: github/codeql-action/analyze@v3
           with:
             category: '/language:${{ matrix.language }}'
+            output: results/python.sarif
   
         - name: 📊 Process Results
           if: always()
@@ -108,6 +98,11 @@
               const fs = require('fs');
   
               try {
+                if (!fs.existsSync('results/python.sarif')) {
+                  console.log('No SARIF file found. Skipping results processing.');
+                  return;
+                }
+                
                 const sarif = JSON.parse(fs.readFileSync('results/python.sarif', 'utf8'));
                 const results = sarif.runs[0].results || [];
   
