--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -47,6 +47,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      security-events: write
 
     strategy:
       fail-fast: false
