--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,63 +1,73 @@
 ---
 # SPDX-License-Identifier: EUPL-1.2
 # SPDX-FileCopyrightText: 2025-present Jürgen Mülbert <juergen.muelbert@outlook.de>
-
+  
 name: 'CodeQL Security Analysis'
-
+  
 on:
   push:
     branches: [main, develop]
-    paths:
-      - '**.py'
-      - '**.pyi'
-      - '**.qml'
-      - 'requirements.txt'
-      - 'pyproject.toml'
+    paths-ignore:
+      - '**/*.ui'
+      - '**/*.qrc'
+      - '**/*.ts'
+      - 'assets/'
+      - 'docs/'
   pull_request:
     branches: [main, develop]
-    paths:
-      - '**.py'
-      - '**.pyi'
-      - '**.qml'
+    paths-ignore:
+        - '**/*.ui'
+        - '**/*.qrc'
+        - '**/*.ts'
+        - 'assets/'
+        - 'docs/'
   schedule:
     - cron: '0 0 * * 0' # Run weekly on Sunday
   workflow_dispatch:
-
+  
 permissions:
   actions: read
   contents: read
   security-events: write
-
+  
 env:
   PACKAGE_NAME: jmbde-python
   PYTHON_VERSION_FILE: .python-version
-
+  
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
-
+  
 jobs:
   analyze:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
-    timeout-minutes: 360
+    timeout-minutes: 60
+
+    permissions:
+      contents: write
+      pull-requests: write
+      security-events: write
 
     strategy:
       fail-fast: false
       matrix:
         language: ['python']
-
+  
     steps:
       - name: 🔒 Harden Runner
         uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
         with:
           egress-policy: audit
-
+  
       - name: 🧰 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
 
+      - name: 🔧 Setup Workspace
+        run: mkdir -p results && echo "Workspace initialized"
+        
       - name: ⚙️ Setup Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
@@ -66,48 +76,42 @@ jobs:
           cache-dependency-path: |
             pyproject.toml
             .github/workflows/requirements.txt
-
+  
       - name: 🔧 Install Dependencies
         run: |
           pip install -r .github/workflows/requirements.txt
-
+  
       - name: 🔍 Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
           # TODO: check varitions of configuration: https://docs.github.com/en/code-security/code-scanning/learn-about-code-scanning/configuring-code-scanning#configuring-codeql
           # #ISSUE: #1218  A fatal error occurred: Config file supplied is not valid
-          config: |
-            paths:
-              - src
-              - tests
-            paths-ignore:
-              - '**/*.ui'
-              - '**/*.qrc'
-              - '**/*.ts'
-              - 'assets/'
-            queries:
-              - security-extended
-              - security-and-quality
 
       - name: 🏗️ Build
         run: |
           hatch build
           # Add any additional build steps if needed
-
+  
       - name: 🔎 Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
-          category: '/language:${{ matrix.language }}'
-
+          category: "${{ matrix.language }}-analyze"
+          output: results/${{ matrix.language }}.sarif
+  
       - name: 📊 Process Results
         if: always()
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           script: |
             const fs = require('fs');
-
+  
             try {
+              if (!fs.existsSync('results/python.sarif')) {
+                console.log('No SARIF file found. Skipping results processing.');
+                return;
+               }
+                
               const sarif = JSON.parse(fs.readFileSync('results/python.sarif', 'utf8'));
               const results = sarif.runs[0].results || [];
 
@@ -121,16 +125,16 @@ jobs:
                   warning: 0,
                   note: 0
                 };
-
+  
                 results.forEach(result => {
                   severity[result.level || 'warning']++;
                 });
-
+  
                 summary += `### Found Issues\n`;
                 summary += `- 🔴 Errors: ${severity.error}\n`;
                 summary += `- 🟡 Warnings: ${severity.warning}\n`;
                 summary += `- 🔵 Notes: ${severity.note}\n\n`;
-
+  
                 if (severity.error > 0 || severity.warning > 0) {
                   summary += `### Recommendations\n`;
                   summary += `1. Review the detailed analysis in the Security tab\n`;
@@ -138,7 +142,7 @@ jobs:
                   summary += `3. Run CodeQL locally using the GitHub CLI\n`;
                 }
               }
-
+  
               // Add to PR if this is a pull request
               if (context.payload.pull_request) {
                 await github.rest.issues.createComment({
@@ -147,30 +151,23 @@ jobs:
                   body: summary
                 });
               }
-
+  
               // Update PR labels
               if (context.payload.pull_request) {
                 const labels = results.length === 0
-                  ? ['security-validated']
-                  : ['security-review-needed'];
-
+                 ? ['security-validated']
+                 : ['security-review-needed'];
+  
                 await github.rest.issues.addLabels({
                   ...context.repo,
                   issue_number: context.payload.pull_request.number,
                   labels: labels
                 });
               }
-
+  
             } catch (error) {
               console.error('Error processing CodeQL results:', error);
             }
-
-      - name: 📤 Upload SARIF
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          # ISSUE: #1219 Provide the path to the SARIF file
-          sarif_file: results/python.sarif
 
       - name: 🚨 Check Critical Issues
         if: always()
