--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ plugins:
   - search:
       separator: '[\\s\\-,:!=\\[\\]()"/]+|(?!=[^=])'
   - glightbox
+  - linkcheck
   - minify:
       minify_html: true
       minify_js: true
