--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -656,6 +656,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
 
+    permissions:
+      issues: write
+      pull-requests: write
+
     steps:
       - name: 🔒 Harden Runner
         uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
