fix: wrong cli name

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -684,8 +684,7 @@ jobs:
 
       - name: 🔍 Security Analysis
         run: |
-          hatch run security:scan
-          hatch run security:audit
+          hatch run security:all
 
       - name: 📊 Complexity Check
         run: |
