--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -502,166 +502,12 @@ jobs:
             htmlcov/
           retention-days: 7
 
-  lint:
-    name: Lint & Format
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: test
 
+  quality-checks:
+    name: Quality Checks
+    runs-on: ubuntu-latest
     permissions:
       security-events: write
-
-    steps:
-      - name: 🔒 Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
-        with:
-          egress-policy: audit
-
-      - name: 🧰 Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: ⚙️ Setup Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
-        with:
-          python-version-file: ${{ env.PYTHON_VERSION_FILE }}
-          cache: pip
-          cache-dependency-path: |
-            .github/workflows/requirements.txt
-            pyproject.toml
-
-      - name: 🛠️ Install Dependencies
-        run: |
-          pip install -r .github/workflows/requirements.txt
-
-      - name: 📦 Cache Pre-commit
-        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: |
-            pre-commit-
-
-      - name: ⚙️ Install lint env with hatch
-        run: hatch env create lint
-
-      - name: ✨ Run All Checks
-        id: checks
-        run: |
-          echo "Running style checks..."
-          hatch run lint:style || echo "style=failed" >> "$GITHUB_OUTPUT"
-
-          echo "Running type checks..."
-          hatch run lint:typing || echo "typing=failed" >> "$GITHUB_OUTPUT"
-
-          echo "Running security checks..."
-          hatch run lint:security || echo "security=failed" >> "$GITHUB_OUTPUT"
-
-          echo "Running license checks..."
-          hatch run lint:license || echo "license=failed" >> "$GITHUB_OUTPUT"
-
-          echo "Running pre-commit checks..."
-          hatch run lint:prcommit || echo "precommit=failed" >> "$GITHUB_OUTPUT"
-
-      - name: 📊 Generate Report
-        if: always()
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          script: |
-            const steps = {
-              style: '${{ steps.checks.outputs.style }}' !== 'failed',
-              typing: '${{ steps.checks.outputs.typing }}' !== 'failed',
-              security: '${{ steps.checks.outputs.security }}' !== 'failed',
-              license: '${{ steps.checks.outputs.license }}' !== 'failed',
-              precommit: '${{ steps.checks.outputs.precommit }}' !== 'failed'
-            };
-
-            let summary = `## 🔍 Code Quality Check Results\n\n`;
-
-            summary += `### Check Status\n`;
-            summary += `- Style Checks: ${steps.style ? '✅' : '❌'}\n`;
-            summary += `- Type Checks: ${steps.typing ? '✅' : '❌'}\n`;
-            summary += `- Security Checks: ${steps.security ? '✅' : '❌'}\n`;
-            summary += `- License Checks: ${steps.license ? '✅' : '❌'}\n`;
-            summary += `- Pre-commit Checks: ${steps.precommit ? '✅' : '❌'}\n\n`;
-
-            if (Object.values(steps).every(Boolean)) {
-              summary += `### ✅ All checks passed successfully!\n`;
-            } else {
-              summary += `### ⚠️ Some checks failed. Please review the logs for details.\n`;
-
-              if (!steps.style) {
-                summary += `\n#### Style Issues\n`;
-                summary += `Run \`hatch run lint:format\` locally to fix style issues.\n`;
-              }
-
-              if (!steps.typing) {
-                summary += `\n#### Type Issues\n`;
-                summary += `Review type annotations and run \`hatch run lint:typing\` locally.\n`;
-              }
-
-              if (!steps.security) {
-                summary += `\n#### Security Issues\n`;
-                summary += `Review security alerts and run \`hatch run lint:security\` locally.\n`;
-              }
-
-              if (!steps.license) {
-                summary += `\n#### License Issues\n`;
-                summary += `Review license alerts and run \`hatch run lint:license\` locally.\n`;
-              }
-
-              if (!steps.precommit) {
-                summary += `\n#### Pre-Commit Issues\n`;
-                summary += `Review pre-commit alerts and run \`hatch run lint:prcommit\` locally.\n`;
-              }
-            }
-
-            if (context.payload.pull_request) {
-              await github.rest.issues.createComment({
-                ...context.repo,
-                issue_number: context.payload.pull_request.number,
-                body: summary
-              });
-            }
-
-      - name: 🏷️ Update Labels
-        if: github.event_name == 'pull_request'
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          script: |
-            const steps = {
-              style: '${{ steps.checks.outputs.style }}' !== 'failed',
-              typing: '${{ steps.checks.outputs.typing }}' !== 'failed',
-              security: '${{ steps.checks.outputs.security }}' !== 'failed',
-              license: '${{ steps.checks.outputs.license }}' !== 'failed',
-              precommit: '${{ steps.checks.outputs.precommit }}' !== 'failed'
-            };
-
-            const labels = [];
-
-            if (Object.values(steps).every(Boolean)) {
-              labels.push('quality-checks-passed');
-            } else {
-              if (!steps.style) labels.push('needs-formatting');
-              if (!steps.typing) labels.push('needs-types');
-              if (!steps.security) labels.push('security-review');
-            }
-
-            await github.rest.issues.addLabels({
-              ...context.repo,
-              issue_number: context.payload.pull_request.number,
-              labels: labels
-            });
-
-      - name: ❌ Check Failure
-        if: failure()
-        run: exit 1
-
-  code-quality:
-    name: Code Quality
-    runs-on: ubuntu-latest
-    needs: validate
-
-    permissions:
       issues: write
       pull-requests: write
 
@@ -681,133 +527,53 @@ jobs:
           cache: pip
           cache-dependency-path: |
             .github/workflows/requirements.txt
+            .pre-commit-config.yaml
             pyproject.toml
+
+      - name: 📦 Cache Pre-commit
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit-
 
       - name: 🔧 Install Dependencies
         run: |
           pip install -r .github/workflows/requirements.txt
 
-      - name: 🔍 Security Analysis
+      - name:  ✨ Run Pre-commit Checks
         run: |
-          hatch run security:all
+          hatch run lint:precommit
 
-      - name: 📊 Complexity Check
-        run: |
-          hatch run lint:radon_quality
-        continue-on-error: true
-
-      - name: 🎯 Run Quality Checks
-        id: quality
-        run: |
-          # Run all checks and collect metrics
-          echo "::group::Style Checks"
-          hatch run lint:style
-          echo "::endgroup::"
-
-          echo "::group::Type Checks"
-          hatch run lint:typing
-          echo "::endgroup::"
-
-          echo "::group::Security Checks"
-          hatch run security:all
-          echo "::endgroup::"
-
-      - name: 📝 Generate Quality Report
+      - name: 📝 Generate Summary Report
         if: always()
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-        with:
-          script: |
-            const metrics = {
-              style: '${{ steps.quality.outputs.style }}' === 'success',
-              typing: '${{ steps.quality.outputs.typing }}' === 'success',
-              security: '${{ steps.quality.outputs.security }}' === 'success',
-            };
+        run: |
+          echo "## 🔍 Quality Checks Summary" > report.md
+          if [ -n "$(git diff --name-only)" ]; then
+            echo "### Issues Detected" >> report.md
+            git diff --name-only >> report.md
+          else
+            echo "All checks passed! 🎉" >> report.md
+          fi
 
-            let report = `## 📊 Code Quality Report\n\n`;
-
-            // Add status badges
-            report += `### Status\n`;
-            report += `- Style: ${metrics.style ? '✅' : '❌'}\n`;
-            report += `- Type Safety: ${metrics.typing ? '✅' : '❌'}\n`;
-            report += `- Security: ${metrics.security ? '✅' : '❌'}\n`;
-
-            // Add recommendations if any checks failed
-            if (Object.values(metrics).includes(false)) {
-              report += `### Recommendations\n`;
-              if (!metrics.style) {
-                report += `- Run \`hatch run lint:format\` locally\n`;
-              }
-              if (!metrics.typing) {
-                report += `- Fix type annotations\n`;
-              }
-              if (!metrics.security) {
-                report += `- Review security warnings\n`;
-              }
-              if (!metrics.docs) {
-                report += `- Improve documentation coverage\n`;
-              }
-            }
-
-            // Add to PR comments
-            if (context.payload.pull_request) {
-              await github.rest.issues.createComment({
-                ...context.repo,
-                issue_number: context.payload.pull_request.number,
-                body: report
-              });
-            }
-
-      - name: 🏷️ Update Labels
+      - name: 💬 Post PR Comment
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.17
+        uses: actions/github-script@v7
         with:
           script: |
-            const quality = '${{ steps.quality.outcome }}' === 'success';
-            const labels = quality ? ['quality-checks-passed'] : ['needs-quality-fixes'];
-
-            await github.rest.issues.addLabels({
+            const fs = require('fs');
+            const report = fs.readFileSync('report.md', 'utf8');
+            github.rest.issues.createComment({
               ...context.repo,
               issue_number: context.payload.pull_request.number,
-              labels: labels
+              body: report
             });
 
-      - name: ❌ Check Status
-        if: steps.quality.outcome != 'success'
+      - name: ❌ Fail Build on Issues
+        if: failure()
         run: exit 1
-
-  security:
-    name: Security Analysis
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs: test
-
-    steps:
-      - name: 🔒 Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
-        with:
-          egress-policy: audit
-
-      - name: 🧰 Checkout Repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: ⚙️ Setup Python
-        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
-        with:
-          python-version-file: ${{ env.PYTHON_VERSION_FILE }}
-          cache: pip
-          cache-dependency-path: |
-            .github/workflows/requirements.txt
-            pyproject.toml
-
-      - name: 🛠️ Install Dependencies
-        run: |
-          pip install -r .github/workflows/requirements.txt
-
-      - name: 🛡️ Security Checks
-        run: |
-          hatch run security:scan
-          hatch run security:audit
-
+ 
   spell-check:
     name: Spell Check
     runs-on: ubuntu-latest
@@ -831,18 +597,15 @@ jobs:
           cache-dependency-path: |
             .github/workflows/requirements.txt
             pyproject.toml
-
       - name: 🔧 Install Dependencies
         run: |
           pip install -r requirements.txt
-
       - name: 🔍 Run Spell Checks
         id: spell-check
         run: |
           echo "Running codespell..."
           hatch env create lint
           hatch run lint:spell > codespell.txt || true
-
           # Check if any changes were made
           if git diff --quiet; then
             echo "changes=false" >> "$GITHUB_OUTPUT"
@@ -850,7 +613,6 @@ jobs:
             echo "changes=true" >> "$GITHUB_OUTPUT"
             git diff --name-only > changed_files.txt
           fi
-
       - name: 📊 Generate Report
         if: always()
         run: |
@@ -863,7 +625,6 @@ jobs:
             else
               echo "No issues found"
             fi
-
             if [ -f "changed_files.txt" ]; then
               echo -e "\n### Files with Automatic Fixes:"
               while IFS= read -r file; do
@@ -871,7 +632,6 @@ jobs:
               done < changed_files.txt
             fi
           } > spell_check_report.md
-
       - name: 💬 Add PR Comment
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
@@ -879,13 +639,11 @@ jobs:
           script: |
             const fs = require('fs');
             const report = fs.readFileSync('spell_check_report.md', 'utf8');
-
             await github.rest.issues.createComment({
               ...context.repo,
-               issue_number: context.payload.pull_request.number,
-               body: report
+                issue_number: context.payload.pull_request.number,
+                body: report
             });
-
       - name: 🔄 Create Fix PR
         if: steps.spell-check.outputs.changes == 'true'
         uses: peter-evans/create-pull-request@v5
@@ -900,7 +658,6 @@ jobs:
             documentation
             automated-pr
             spelling
-
       - name: 📦 Upload Report
         if: always()
         uses: actions/upload-artifact@v4
@@ -1041,7 +798,7 @@ jobs:
   report:
     name: Generate Report
     if: always()
-    needs: [validate, validate-pr, test, lint, security, spell-check, docs]
+    needs: [validate, validate-pr, test, quality-checks, spell-check, docs]
     runs-on: ubuntu-latest
 
     steps:
